Fixing My Order Not able module find

--- a/views/user/myOrder.hbs
+++ b/views/user/myOrder.hbs
@@ -18,6 +18,7 @@
 
                     <th scope="col-md-3">Address</th>
                     <th scope="col-md-3">Date</th>
+                    <th scope="col-md-3">Status</th>
 
                 </tr>
             </thead>
@@ -36,6 +37,7 @@
 
                     <th scope="row" style="width: 14rem;">{{this.Address.address}}</th>
                     <th scope="row" style="width: 14rem;">{{this.date}}</th>
+                     <th scope="row" style="width: 14rem;"><button class="btn btn-success" >Pending</button></th>
 
                 </tr>
                 {{/each}}
