--- a/views/admin/view-order.hbs
+++ b/views/admin/view-order.hbs
@@ -15,6 +15,7 @@
 
                         <th scope="col-md-3">Address</th>
                         <th scope="col-md-3">Date</th>
+                        <th scope="col-md-3">Status</th>
 
                     </tr>
                 </thead>
@@ -36,6 +37,8 @@
                             <td>{{this.Address.address}}</td>
 
                             <td>{{this.date}}</td>
+                             <td><a href="/admin/removeOrder/?{{this._id}}" class="btn btn-primary">Delivered</button></td>
+
 
 
 
