--- a/views/partials/homenav.hbs
+++ b/views/partials/homenav.hbs
@@ -42,7 +42,7 @@
 
 
         </div>
-        <a href="/cart"> <i id="cart" class='bx bx-cart-add text-light' data-count=""></i></a>
+        <a href='/cart'> <i id="cart" class='bx bx-cart-add text-light' data-count=""></i></a>
         <div class="menu">
             <i class='bx bx-menu'></i>
             <div class="menu-list">
