--- a/views/user/order.hbs
+++ b/views/user/order.hbs
@@ -117,7 +117,7 @@
         }
 
 
-        fetch('/user-address', { method: "POST", headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(pro_data) }).then(res=>{
+        fetch('/user-address', { method: "PATCH", headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(pro_data) }).then(res=>{
             return res.json()
         }).then(token=>{
             window.location = `/user-address?token=${token}`
