--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://kit.fontawesome.com/8e10a2e3e4.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="/public/stylesheets/style.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
+
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
@@ -38,6 +40,8 @@
 
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
@@ -49,6 +53,11 @@
 
 
   <script src="/public/javascripts/main.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      let table = new DataTable('.table');
+    });
+  </script>
 
   {{!-- end --}}
 
