--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,3 +1,11 @@
+<script>
+  let status = localStorage.getItem('status');
+  if(status == 200){
+    window.location= '/';
+  }
+</script>
+
+
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
