--- a/views/admin/view-order.hbs
+++ b/views/admin/view-order.hbs
@@ -6,7 +6,7 @@
             <table class=" table w-100 ">
                 <thead>
                     <tr>
-                         <th scope="col-md-3">No</th>
+                        <th scope="col-md-3">No</th>
                         <th scope="col-md-3">Name</th>
                         <th scope="col-md-3">Email</th>
                         <th scope="col-md-3">Products</th>
@@ -29,15 +29,21 @@
                             <td>{{this.name}}</td>
                             <td>{{this.email}}</td>
                             <td>{{#each this.products}}<P>{{ this.name}}
-                        </P>{{/each}}</td>
+                                </P>{{/each}}</td>
                             <td>{{#each this.products}}<P>{{ this.price}}
-                        </P>{{/each}}</td>
+                                </P>{{/each}}</td>
                             <td>{{#each this.products}}<P>{{ this.quantity}}
-                        </P>{{/each}}</td>
+                                </P>{{/each}}</td>
                             <td>{{this.Address.address}}</td>
 
                             <td>{{this.date}}</td>
-                             <td><a href="/admin/removeOrder/?{{this._id}}" class="btn btn-primary">Delivered</button></td>
+                            {{#if this.delivered}}
+                            <td><a href="/admin/removeOrder/?{{this._id}}" class="btn btn-success disabled">Delivered</a>
+                            </td>
+                            {{else}}
+                            <td><a href="/admin/removeOrder/?{{this._id}}" class="btn btn-primary">Deliver</a>
+                            </td>
+                            {{/if}}
 
 
 
