--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -42,7 +42,7 @@
 
 
         <div class="drop-holder">
-                <hr>
+            <hr>
             <div class="bar">
                 <span style="margin-top:20px;margin-left: 24px;">
                     SIZE
@@ -83,9 +83,9 @@
 
             <div class="col-xl-3 col-md-4 col-sm-6  d-flex p-3 gap-3 mt-4  ">
 
-                <div class="card " style="width: 18rem;border: 0;">
+                <div class="card " style="width: 18rem; height: 20rem;border: 0;">
 
-                    <a href="/add-to-order/id?{{this._id}}"><img style="width:200px;height:200px"
+                    <a href="/add-to-order/?id={{this._id}}"><img style="width:200px;height:200px"
                             src="images/{{this.image}}" class="card-img-top" alt="..."></a>
 
                     <div class="card-body h-25" id="table2">
